--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,20 @@
 /* Box Model Hack */
+body{
+  background-color: black;
+}
+
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-/* Clear fix hack */
-.clearfix:after {
-     content: ".";
-     display: block;
-     clear: both;
-     visibility: hidden;
-     line-height: 0;
-     height: 0;
+#canvas1 {
+  position: absolute;
+  border: 3px solid white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  height: 700px;
+  width: 800px;
 }
-
-.clear {
-	clear: both;
-}
-
-/******************************************
-/* BASE STYLES
-/*******************************************/
