--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,26 @@ body{
   margin: 0;
 }
 
-#canvas1 {
+#container {
   position: absolute;
-  border: 3px solid white;
+  width: 800px;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+  font-size: 25px;
+}
+
+#canvas1 {
+  position: relative;
+  border: 3px solid white;
   height: 700px;
   width: 800px;
+}
+
+#slider {
+  width: 100%;
+}
+
+p {
+  color: white;
 }
